syntax = "proto3";

package pv.svc;
option go_package = "pb/svc";

service Manager {
    rpc CreateNewJob(CreateNewJobReq) returns (CreateNewJobRes);
    rpc GetJobStatus(GetJobStatusReq) returns (GetJobStatusRes);
    rpc StopJob(StopJobReq) returns (StopJobRes);
}

message CreateNewJobReq {
    string keyword = 1;
    string id = 2;
    string owner = 3;
}

message CreateNewJobRes {
    string status = 1;
}

message GetJobStatusReq {
    string id = 1;
    string owner = 2;
}

message GetJobStatusRes {
    string status = 1;
}

message StopJobReq {
    string id = 1;
}

message StopJobRes {}